--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ish-sandhu-my-favourite-movies",
-  "version": "0.0.0",
+  "version": "0.0.3x",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
